# e843_install_np4

./: .MugastShape  .gitignore  .rootrc  .~lock.e_log_excel.xlsx#  CMakeLists.txt  Calibrationnew.txt  cmake_install.cmake  cmd.sh  convert_all.sh  converter.sh  duplicate.cmake  e_log_excel.xlsx  local_plugin.list  project.yaml  psinstall.sh  reinstall.sh
A_ANALYSIS_NOTES/: (dp)fit.odp  .~lock.MUST2_Geometry.odg#  .~lock.beam_reconstruction.odp#  .~lock.efficiency_Exogams.ods#  .~lock.mugast_analysis.odp#  67Ni_production_ratio.odg  Agenda_Aug27.odg  Beam_reconstruction.odg  Changes_TZDD.odg  Detectors_&_Distances.odg  MUST2_Geometry.odg  STARS_meeting_Oct_21_2025.odp  TAC_D4_CATS_merging.odg  TS_shift.odg  beam_reconstruction.odp  dp_analysis.odp  dp_angular_distribution.ods  eff_of_CHIO.odg  efficiency_Exogams.ods  experimental_parameters.odg  experimental_parameters_change.ods  fits.odp  fitting_EX_dp.odg  for_raquel.odp  lise_ic_calibratin.odg  meeting_Oct29_2025.odp  plastics_cosmic.odg  res_of_CHIO.odg  scanning_exogam_69Ni_dp.ods  tasks_to_finish.odg
Codes/: 2DCollisionSim.html  Convert_e843.py  DopplerResolutionStudyPercent.C  DrawEx.C  Eff_CHIO_merging_window_BRUTE_FORCE.C  Eu152_gamma_fit.cpp  Eu152_gamma_fit_2.cpp  MW_comparison.cpp  Mugast_573.cpp  Mugast_573_calib_check.cpp  Mugast_573_calibrated.cpp  Prabhat_Script_mod27.cpp  ShowKine_byLL.C  TS_Calib_FIT.C  calibrator_3_alpha.C  calibrator_3_alpha_2.C  cats_calibration.C  cats_charge_recon_v1.cpp  cats_charge_recon_v2.cpp  cats_charge_reconstruction.cpp  change_action_file.cpp  dp_analysis.C  dp_analysis_2.C  dp_analysis_3.C  dp_analysis_exogam_correction.C  dp_analysis_np4.C  exogam_correction.C  gamma_efficiency.C  gamma_efficiency_total.C  npreader.sh  npreader_4.sh  npreader_5.sh  perpendicular_line_conversion.C  reaction_dynamics.cpp  save_GATCONFTS_spectra_to_image.C  template_macro.cpp  time_diff_2evts.C  understanding_nptoolCxx.txt
DoCalibration/: CalibrationAlpha.do  CalibrationAlphaMG.do  CalibrationExogam60Co.do
Files_from_ozge/: Calcul_Angle_Exogamc.cxx  EXOGAM_E843(2).pptx  Trajectory_reconstruction.cxx  Trajectory_reconstruction_old.cxx  drift_charge.C  drift_charge_mod_by_PS.C  drift_length2.C  mugast_e843.detector
Files_from_ozge/CATS/: CMakeLists.txt  TCATSData.rootmap  TCATSDataDict.cxx  TCATSPhysics.cxx  TCATSPhysics.h  TCATSPhysics.rootmap  TCATSPhysicsDict.cxx  TCATSPhysicsReader.cxx  TCATSPhysicsReader.h  TCATSPhysicsReader.rootmap  TCATSPhysicsReaderDict.cxx  TCATSSpectra.cxx  cmake_install.cmake
Reactions/: 48Cr_p3He_gs_30MeVu.reaction  48Cr_pd_gs_30MeVu.reaction  58Ni_pd_gs.reaction  58Ni_pd_gs.txt  68Ni_dp_gs_18MeVu.reaction  Ne24dp.yaml  (+2 more)
analysis/: Analysis.cxx  Analysis.h  Analysis_Beam_Spot.cxx  Analysis_Beam_Spot.h  Analysis_SP.cxx  Analysis_SP.h  Analysis_TAC.cxx  Analysis_TAC.h  Analysis_ZDD.cxx  Analysis_ZDD.h  Analysis_templates.cxx  CMakeLists.txt  cmake_install.cmake
analysis/Reference_files/: Analysis-offline.cxx  Analysis.cxx  Analysis_10March.cxx  Analysis_10March.h  Analysis_before_changes_from_Ozge.cxx  Analysis_e869.cxx  Analysis_next_change_GATCONF_ONLY_2.cxx  Analysis_online.cxx  Analysis_online.h  Analysis_original.cxx  Analysis_tmp.cxx  Analysis_working_old.cxx  Analysis_working_old.h
cats/src/: CMakeLists.txt  CatsDetector.cxx  CatsDetectorlocal.cxx  CatsPhysics.cxx  CatsSpectra.cxx  CatsSpectraT.cxx  Catslinkdef.hh  cmake_install.cmake  module.modulemap
ebye/src/: CMakeLists.txt  EbyEDetector.cxx  EbyEDetector.h  cmake_install.cmake
exogam/src/: CMakeLists.txt  CoherentGe.xcom  ExogamDetector.cxx  ExogamDetector.h  ExogamPhysics.cxx  ExogamPhysics.h  ExogamSimulatedGeometry.h  ExogamSpectra.cxx  ThetaPhiXYZ.txt  cmake_install.cmake  exo_plug.cxx
geant4/beam/: CMakeLists.txt  NPG4Beam.cxx  NPG4Beam.h
geant4/core/: CMakeLists.txt  InteractionCoordinates.cxx  InteractionCoordinateslinkdef.hh  NPG4DetectorConstruction.cxx  NPG4EventAction.cxx  NPG4MaterialManager.cxx  NPG4MaterialManager.h  NPG4PrimaryGeneratorAction.cxx  NPG4RunAction.cxx  NPG4RunAction.h  NPG4Session.cxx  NPG4Session.h  NPG4VDetector.cxx  NPG4VDetector.h  NPG4VPhysicsList.cxx  NPG4VPhysicsList.h  module.modulemap  npgeant4.cxx
geant4/interaction-scorer/: CMakeLists.txt  NPG4InteractionScorer.cxx  NPG4InteractionScorer.h  plugin.yaml
geant4/isotropic-source/: CMakeLists.txt  NPG4Source.cxx
geant4_old/: CMakeLists.txt  README.md
geant4_old/base-physics/: CMakeLists.txt
geant4_old/core/: CMakeLists.txt  NPG4DetectorConstruction.h  NPG4PrimaryGeneratorAction.cxx  NPG4Session.cxx  NPG4VBeamProcess.cxx  NPG4VDetector.h  NPG4VPhysicsList.cxx
geant4_old/isotropic-source/: NPG4Source.cxx  NPG4Source.h
mfm/: CMakeLists.txt  CMakeLists.txt.default  FindMFM.cmake  FindZMQ.cmake  README.md  cmake_install.cmake  plugin.yaml
mfm/src/: CMakeLists.txt  NPMFMInput.cxx  NPMFMInput.h  cmake_install.cmake
must2/src/: CMakeLists.txt  Must2Data.cxx  Must2Detector.cxx  Must2Geant4.cxx  Must2Geant4.h  Must2Physics.cxx  Must2Spectra.cxx  Must2Spectra.cxx.val  Must2Spectra.h  cmake_install.cmake  module.modulemap
numexo/src/: CMakeLists.txt  NumexoDetector.cxx  NumexoSpectra.cxx  NumexoSpectra.h  cmake_install.cmake
physics-essential/: CMakeLists.txt  NPBeam.cxx  NPEnergyLoss.cxx  NPParticle.cxx  NPParticle.h  NPReaction.cxx  NPReaction.h  PhysicsEssentialLinkdef.h  README.md  cmake_install.cmake  module.modulemap  plugin.yaml
root/: CMakeLists.txt  cmake_install.cmake  plugin.yaml
root/ressource/: online.html
root/src/: CMakeLists.txt  NPRootAsciiFile.cxx  NPRootDict.cxx_tmp_103011  NPRootHTMLUserInterface.cxx  NPRootInput.cxx  NPRootOutput.cxx  NPRootPlugin.cxx  NPRootTreeClient.cxx  NPRootTreeServer.cxx  NPRootlinkdef.hh  cmake_install.cmake  module.modulemap
tac/src/: CMakeLists.txt  TacData.cxx  TacData.h  TacDetector.cxx  TacPhysics.cxx  TacSpectra.cxx  Taclinkdef.hh  cmake_install.cmake  module.modulemap
zdd/src/: CMakeLists.txt  ZddData.cxx  ZddData.h  ZddDetector.cxx  ZddDetector.h  ZddPhysics.cxx  ZddPhysics.h  Zddlinkdef.hh  cmake_install.cmake  module.modulemap
(+1086 files in other folders)
