add_library(NPGeant4 SHARED NPG4Session.cxx NPG4VDetector.h NPG4VPrimaryGenerator.h NPG4DetectorConstruction.cxx NPG4VPhysicsList.cxx NPG4PrimaryGeneratorAction.cxx NPG4MaterialManager.cxx NPG4VBeamProcess.cxx)
target_link_libraries(NPGeant4 nptool ${Geant4_LIBRARIES}) 
add_executable(npgeant4 npgeant4.cxx) 
target_link_libraries(npgeant4 nptool NPGeant4 ${Geant4_LIBRARIES}) 
install(DIRECTORY ./ DESTINATION ${CMAKE_INCLUDE_OUTPUT_DIRECTORY} FILES_MATCHING PATTERN "*.h" )
